:lipstick: fix toast on smaller devices

--- a/src/components/atoms/toast/toast.scss
+++ b/src/components/atoms/toast/toast.scss
@@ -115,3 +115,9 @@
     transform: translateY(150%);
   }
 }
+
+@media screen and (max-width: 425px) {
+  .toast {
+    width: 85vw;
+  }
+}
